[package]
name = "fannkuch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd = { version = "0.3.4", package = "packed_simd_2" }
lazy_static = "1.4.0"
rayon-cond = "0.2.0"

[profile.release]
lto = "fat"
codegen-units = 1